--- a/inSooqApp/Controllers/Forms/Elements/PreviewView/FormPreviewView.xib
+++ b/inSooqApp/Controllers/Forms/Elements/PreviewView/FormPreviewView.xib
@@ -59,8 +59,8 @@
                                 <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="dMt-T6-D4V">
                                     <rect key="frame" x="0.0" y="23.5" width="260" height="16"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-9k-dqZ">
-                                            <rect key="frame" x="0.0" y="1" width="15.5" height="14.5"/>
+                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="location_preview" translatesAutoresizingMaskIntoConstraints="NO" id="9rX-9k-dqZ">
+                                            <rect key="frame" x="0.0" y="0.0" width="15.5" height="16"/>
                                             <color key="tintColor" systemColor="systemGray2Color"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="9rX-9k-dqZ" secondAttribute="height" multiplier="1:1" id="HdQ-Fz-cxx"/>
@@ -75,18 +75,16 @@
                                         </label>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="u6G-hD-p1s">
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="u6G-hD-p1s" userLabel="AttributeStack1">
                                     <rect key="frame" x="0.0" y="47.5" width="260" height="15.5"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="rfR-EM-im2">
-                                            <rect key="frame" x="0.0" y="0.0" width="15.5" height="15.5"/>
+                                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="rfR-EM-im2">
                                             <color key="tintColor" systemColor="systemGrayColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="rfR-EM-im2" secondAttribute="height" multiplier="1:1" id="PYK-WV-q08"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hoc-Me-rAa" userLabel="titleLabel">
-                                            <rect key="frame" x="19.5" y="0.0" width="240.5" height="15.5"/>
+                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Hoc-Me-rAa" userLabel="titleLabel">
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" systemColor="systemGrayColor"/>
@@ -94,18 +92,16 @@
                                         </label>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="aK6-xX-aSD">
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="aK6-xX-aSD" userLabel="AttributeStack2">
                                     <rect key="frame" x="0.0" y="71" width="260" height="15.5"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ou6-9I-R0R">
-                                            <rect key="frame" x="0.0" y="0.0" width="15.5" height="15.5"/>
+                                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="Ou6-9I-R0R">
                                             <color key="tintColor" systemColor="systemGrayColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="Ou6-9I-R0R" secondAttribute="height" multiplier="1:1" id="200-8y-Vzw"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elZ-OE-AHa" userLabel="titleLabel">
-                                            <rect key="frame" x="19.5" y="0.0" width="240.5" height="15.5"/>
+                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="elZ-OE-AHa" userLabel="titleLabel">
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" systemColor="systemGrayColor"/>
@@ -113,18 +109,16 @@
                                         </label>
                                     </subviews>
                                 </stackView>
-                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="6u5-G8-irU">
+                                <stackView opaque="NO" contentMode="scaleToFill" spacing="4" translatesAutoresizingMaskIntoConstraints="NO" id="6u5-G8-irU" userLabel="AttributeStack3">
                                     <rect key="frame" x="0.0" y="94.5" width="260" height="16"/>
                                     <subviews>
-                                        <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="EFg-1n-sfx">
-                                            <rect key="frame" x="0.0" y="0.0" width="15.5" height="16"/>
+                                        <imageView hidden="YES" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="doc" catalog="system" translatesAutoresizingMaskIntoConstraints="NO" id="EFg-1n-sfx">
                                             <color key="tintColor" systemColor="systemGrayColor"/>
                                             <constraints>
                                                 <constraint firstAttribute="width" secondItem="EFg-1n-sfx" secondAttribute="height" multiplier="1:1" id="d6r-Te-gVw"/>
                                             </constraints>
                                         </imageView>
-                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wD-Av-6Nt" userLabel="titleLabel">
-                                            <rect key="frame" x="19.5" y="0.0" width="240.5" height="16"/>
+                                        <label hidden="YES" opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" horizontalCompressionResistancePriority="749" text="N/A" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="1wD-Av-6Nt" userLabel="titleLabel">
                                             <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                             <color key="textColor" systemColor="systemGrayColor"/>
@@ -188,6 +182,9 @@
                 <outlet property="attribute2ValueLabel" destination="elZ-OE-AHa" id="aYC-ym-8Qu"/>
                 <outlet property="attribute3KeyIcon" destination="EFg-1n-sfx" id="2XN-w3-ZvV"/>
                 <outlet property="attribute3ValueLabel" destination="1wD-Av-6Nt" id="kPk-kC-JKL"/>
+                <outlet property="attributeStack1" destination="u6G-hD-p1s" id="njG-CC-E3l"/>
+                <outlet property="attributeStack2" destination="aK6-xX-aSD" id="Sbk-0C-O16"/>
+                <outlet property="attributeStack3" destination="6u5-G8-irU" id="tnC-9e-D8x"/>
                 <outlet property="priceLabel" destination="CdQ-xt-7Es" id="mZD-46-TBB"/>
             </connections>
             <point key="canvasLocation" x="137.68115942028987" y="122.54464285714285"/>
@@ -196,7 +193,7 @@
     <resources>
         <image name="doc" catalog="system" width="115" height="128"/>
         <image name="heart" catalog="system" width="128" height="109"/>
-        <image name="location" catalog="system" width="128" height="118"/>
+        <image name="location_preview" width="28" height="36"/>
         <systemColor name="systemGray2Color">
             <color red="0.68235294117647061" green="0.68235294117647061" blue="0.69803921568627447" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
